@@ -86,16 +86,16 @@ Buttons[]=bold
 Buttons[]=italic
 Buttons[]=underline
 Buttons[]=|
-#Buttons[]=sub
-#Buttons[]=sup
-#Buttons[]=|
+Buttons[]=sub
+Buttons[]=sup
+Buttons[]=|
 # To controll alignment on p|header|custom|table|td|th tags
-# Only supported on eZ Publish 4.1 and higher
-#Buttons[]=justifyleft
-#Buttons[]=justifycenter
-#Buttons[]=justifyright
-#Buttons[]=justifyfull
-#Buttons[]=|
+# Only supported on eZ Publish 4.1 and higher (buttons will be hidden in 4.0.x)
+Buttons[]=justifyleft
+Buttons[]=justifycenter
+Buttons[]=justifyright
+Buttons[]=justifyfull
+Buttons[]=|
 Buttons[]=bullist
 Buttons[]=numlist
 Buttons[]=indent
